Fixed container overflow

--- a/konah/assets/css/style.css
+++ b/konah/assets/css/style.css
@@ -17,7 +17,10 @@
     padding: 0;
     margin: 0;
 }
-
+.container{
+    overflow: hidden;
+    position: relative;
+}
 *{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
